fix dark mode breaking rounded corners

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,5 @@
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
-    background-color: #2f2f2f;
   }
 }
